// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScoringCard snapshot snapshot: scoring setting card 1`] = `
<SettingsOption
  summary="{attempts, plural, =0 {Unlimited} other {#}} attempts - {weight, plural, =0 {Ungraded} other {# points}}"
  title="Scoring"
>
  <Form.Group>
    <Form.Control
      floatingLabel="Attempts"
      onChange={[MockFunction scoringCardHooks.handleMaxAttemptChange]}
      type="number"
      value={5}
    />
  </Form.Group>
  <Form.Group>
    <Form.Control
      floatingLabel="Points"
      onChange={[MockFunction scoringCardHooks.handleWeightChange]}
      type="number"
      value={1.5}
    />
  </Form.Group>
</SettingsOption>
`;

exports[`ScoringCard snapshot snapshot: scoring setting card max attempts 1`] = `
<SettingsOption
  summary="{attempts, plural, =0 {Unlimited} other {#}} attempts - {weight, plural, =0 {Ungraded} other {# points}}"
  title="Scoring"
>
  <Form.Group>
    <Form.Control
      floatingLabel="Attempts"
      onChange={[MockFunction scoringCardHooks.handleMaxAttemptChange]}
      type="number"
      value={0}
    />
  </Form.Group>
  <Form.Group>
    <Form.Control
      floatingLabel="Points"
      onChange={[MockFunction scoringCardHooks.handleWeightChange]}
      type="number"
      value={1.5}
    />
  </Form.Group>
</SettingsOption>
`;

exports[`ScoringCard snapshot snapshot: scoring setting card zero zero weight 1`] = `
<SettingsOption
  summary="{attempts, plural, =0 {Unlimited} other {#}} attempts - {weight, plural, =0 {Ungraded} other {# points}}"
  title="Scoring"
>
  <Form.Group>
    <Form.Control
      floatingLabel="Attempts"
      onChange={[MockFunction scoringCardHooks.handleMaxAttemptChange]}
      type="number"
      value={5}
    />
  </Form.Group>
  <Form.Group>
    <Form.Control
      floatingLabel="Points"
      onChange={[MockFunction scoringCardHooks.handleWeightChange]}
      type="number"
      value={0}
    />
  </Form.Group>
</SettingsOption>
`;
